--- a/01.30.md
+++ b/01.30.md
@@ -363,5 +363,36 @@ b_pig.belly_price = b_pig.belly_price * 0.8
 # print(a_pig.order_price(150))
 print(b_pig.belly_price)
 print()
-# b 돼지에서 원래 가격도 접근 가능함
+
+```
+```
+1. b 돼지의 가격이 20% 할인 됨
+ 1) b_pig.belly_price = b_pig.belly_price * 0.8
+ 2) def discount():
+      b_pig.belly_price = b_pig.belly_price * (1 - percentage)
+      return self.belly_price
+
+    b_pig.discount(0.2)
+2. b 돼지에서 원래 가격에 접근
+  1) Pig.belly_price
+  2) def original_price(self):
+      return Pig.belly_price
+  3) @ classmethod
+      def original_price(cls):
+        return cls.belly_price
+
+3. b 돼지를 50만큼 샀을 때, 원래 가격, 할인된 가격 둘다 반환.
+  1) def_original_price(self, amount):
+      if self.stock >= amount:
+        return self.original_price() * amount
+
+  print(b_pig.order_price(50))
+  print(b_pig.order_orginal_price(50))
+
+  2) @ classmethod
+      def original_price(cls):
+        return cls.belly_price
+
+      def both_price(self, amount):
+      return self.order_price(amount), self.order_original_price(amount)
 ```
