--- a/django/03.20/3.20.md
+++ b/django/03.20/3.20.md
@@ -524,8 +524,9 @@ def create(request):
 
 (1) new와 create view 함수를 합침
 (2) 각각의 역할은 request.method 값을 기준으로 나뉨
-(3) POST고 유효성 검사를 통과한다면 DB에 저장 후 detail를 보여줌
-(4) 아니라면 다시 create.html을 보여줌
+(3) 처음은 new의 역할을 하는 a tag가 오므로 if를 만족 x 따라서 밑에 create.html을 보여주게 됨
+(4) 다음은 create.html에서 post방법으로 정보를 보냄
+(5) if 를 만족시키므로 위 조건문으로 가고 유효성 검사 까지도 만족시킨다면 DB에 저장
 ```
 
 ```
