--- a/django/03.20/3.20.md
+++ b/django/03.20/3.20.md
@@ -83,6 +83,9 @@ urlpatterns = [
 
 ]
 # app_name이 의미하는 것?????????????
+- include()를 사용할 떄 이름이 중복되는 문제를 방지하기 위하여 사용
+'url 네임값':전달할 파라미터
+ex) articles:create
 ```
 
 ```
