--- a/04.03/04.03.md
+++ b/04.03/04.03.md
@@ -1,1 +1,145 @@
-# dsf
+# 그래프 유형
+```
+1. 무향 그래프
+2. 유향 그래프
+3. 가중치 그래프
+4. 사이클 없는 방향 그래프
+5. 완전 그래프
+6. 부분 그래프
+```
+
+```
+1. 인접
+ - 두 개의 정점에 간선이 존재하면 서로 인접해 있다고 한다.
+ - 완전 그래프에 속한 임의의 두 점점들은 모두 인접해 있다.
+
+2. 그래프 경로
+ - 경로란 간선들을 순서대로 나열한 것
+  - 간선들: (0, 2), (2, 4), ( 4, 6)
+  - 정점들 0-2-4-6
+ - 경로 중 한 정점을 최대한 한번만 지나는 경로를 단순경로라 한다.
+ - 시작한 정점에서 끝나는 경로를 사이클이라고 한다.
+```
+
+```
+1. 그래프 표현
+ - 간선의 정보를 저장하는 방식, 메모리나 성능을 고려해서 결정
+ - 인접 행렬  
+  - |v| * |v| 크기의 2차원 배열을 이용해서 간선 정보를 저장
+  - 배열의 배열
+ - 인접 리스트
+  - 각 정점마다 해당 정점으로 나가는 간서의 정보를 저장
+ - 간선의 배열
+  - 간선을 배열에 연속적으로 저장
+
+2. 인접 행렬
+ - 두 정점을 연결하는 간선의 유무를 행렬로 표현
+  - |v| * |v| 정방 행렬
+  - 행 번호와 열 번호는 그래프의 정점에 대응
+  - 두 정점이 인접되어 있으면 1 그렇지 않으면 0으로 표현
+  - 무향 그래프
+   - i번째 행의 합 = i번째 열의 합 = vi의 차수
+  - 유향 그래프 
+   - 행 i의 합 = Vi의 진출 차수
+   - 열 i의 합 = Vi의 진입 차수
+
+3. 인접 리스트 
+ - 각 정점에 대한 인접 정점들을 순차적으로 표현
+ - 하나의 정점에 대한 인접 정점들을 각각 노드로 하는 연결 리스트로 저장
+```
+
+# DFS
+```
+- 그래프 순회는 비선형구조인 그래프로 표현된 모든 자료(정점)를 빠짐없이 탐색하는 것을 의미한다.
+
+- 두 가지 방법
+ - 깊이 우선 탐색
+ - 너비 우선 탐색
+
+1. 깊이우선탐색(DFS)
+ - 시작 정점의 한 방향으로 갈 수 있는 경로가 있는 곳까지 깊이 탐색해 가다가 더 이상 갈 곳이 없게 되면 가장 마지막에 만났던 갈림길 간선이 있는 정점으로 탐색을 계속 반복하여 결국 모든 정점을 방문하는 순회방법
+
+ - 가장 마지막에 만났던 갈림길의 정점으로 되돌아가서 다시 깊이 우선 탐색을 반복해야 하므로 후입선출 구조의 스택 사용
+
+2. 스택
+ - 스택의 특성
+   - 물건을 쌓아 올리듯 자료를 쌓아 올리 형태의 자료구조
+   - 선형구조 : 자료 간의 관계가 1대1의 관계를 갖는다.
+    - 비선형구조 : 자료 간의 관계가 1대N의 관계를 갖는다.
+   - 마지막에 삽입한 자료를 가장 먼저 꺼낸다.
+    - 선입선출구조
+
+```
+
+# BFS
+```
+- 너비우선탐색은 탐색 시작점의 인접한 정점들을 먼저 모두 차례로 방문한 후에 방문했던 정점을 시작점으로 하여 다시 인접한 정점들을 차례로 방문하는 방식
+
+- 인접한 정점들에 대해 탐색을 한 후, 차례로 다시 너비우선탐색을 진행해야 하므로 선입선출 형태의 자료구조인 큐를 활용
+```
+
+```
+1. 큐
+ - 큐의 특성
+  - 스택과 마찬가지로 삽입과 삭제의 위치가 제한적인 자료구조
+   - 큐의 뒤에서는 삽입만 하고, 큐의 앞에서는 삭제만 이루어지는 구조
+```
+
+# 서로소 집합들
+```
+- 서로소 또는 상호배타 집합들은 서로 중복 포함된 원소가 없는 집합들이다. 다시 말해 교집합이 없다.
+- 집합에 속한 하나의 특정 멤버를 각 집합들을 구분한다. 이를 대표자라 한다.
+```
+
+```
+- 상호배타 집합을 표현하는 방법
+ - 연결 리스트
+ - 트리
+
+- 상호배타 집합 연산
+ - Make-Set(x)
+ - Find-Set(x)
+ - Union(x, y)
+
+```
+
+```
+- 상호 배타 집합 표현 - 연결리스트
+ - 같은 집합의 원소들은 하나의 연결리스트로 관리한다.
+ - 연결리스트의 맨 앞의 원소를 집합의 대표 원소로 삼는다.
+ - 각 원소는 집합의 대표원소를 가리키는 링크를 갖는다.
+
+- 상호 배타 집합 표현 - 트리
+ - 하나의 집합을 하나의 트리로 표현한다.
+ - 자식 노드가 부모 노드를 가리키며 루트 노드가 대표자가 된다.
+
+- 상호배타 집합에 대한 연선
+ - Make-Set(x) : 유일한 멤버 x를 포함하는 새로운 집합을 생성하는 연산
+ - Find-Set(x) : x를 포함하는 집합을 찾는 연산
+ - Union(x,y) : x와 y를 포함하는 두 집합을 통합하는 연산
+
+```
+
+# 최소 비용 신장 트리
+```
+- 그래프에서 최소 비용 문제
+ - 모든 정점을 연결하는 간선들의 가중치의 합이 최소가 되는 트리
+ - 두 정점 사이의 최소 비용의 경로 찾기
+
+- 신장 트리
+ - n개의 정점으로 이루어진 무방향 그래프에서 n개의 정점과 n-1개의 간선으로 이루어진 트리
+
+- 최소 신장 트리
+ - 무방향 가중치 그래프에서 신장 트리르 구성하는 간선들의 가중치의 합이 최소인 신장 트리
+```
+
+```
+1. Prim 알고리즘
+- 하나의 정점에서 연결된 간선들 중에 하나씩 선택하면서 최소신장트리를 만들어 가는 방식
+ (1) 임의 정점을 하나 선택해서 시작
+ (2) 선택한 정점과 인접하는 정점들 중의 최소 비용의 간선이 존재하는 정점을 선택
+ (3) 모든 정점이 선택될 때 까지 (1),(2) 과정을 반복
+
+- 서로소인 2개의 집합 정보를 유지
+ - 트리 정점들 : 최소신장트리를 만들기 위해 선택된 정점들
+ - 비트리 정점들 : 선택 되지 않은 정점들
